Make g_unix_connection_send_fd() work as expected.

https://bugzilla.gnome.org/show_bug.cgi?id=637696